--- a/index.html
+++ b/index.html
@@ -14,9 +14,79 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="mobile-menu">
+      <ul class="mobile-menu-nav">
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">О компании</a>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Контрактное производство</a>
+          <ul class="mobile-submenu">
+            <li class="mobile-submenu-item">
+              <a class="mobile-submenu-link" href="#">Автомобильная химия</a>
+            </li>
+            <li class="mobile-submenu-item">
+              <a class="mobile-submenu-link" href="#">Бытовая химия</a>
+            </li>
+            <li class="mobile-submenu-item">
+              <a class="mobile-submenu-link" href="#"
+                >Дезинфицирующие средства</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Собственные торговые марки</a>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Новости</a>
+        </li>
+        <li class="mobile-menu-nav-item">
+          <a href="#" class="mobile-menu-link">Контакты</a>
+        </li>
+      </ul>
+      <a href="tel:+74996861014" class="mobile-phone">+7 (499)686-10-14</a>
+      <div class="mobile-info">
+        <svg class="phone-icon" width="24" height="24">
+          <use href="img/sprite.svg#Addresse"></use>
+        </svg>
+        <address class="mobile-info-address">
+          г. Мосвка, Холодильный пер. 4к1с8
+        </address>
+      </div>
+      <!-- /.mobile-info -->
+      <div class="mobile-info">
+        <svg class="phone-icon" width="24" height="24">
+          <use href="img/sprite.svg#Email"></use>
+        </svg>
+        <a href="mailto:a.dragunov@tdaliance.ru" class="mobile-info-email"
+          >a.dragunov@tdaliance.ru</a
+        >
+      </div>
+      <!-- /.mobile-info -->
+      <div class="mobile-info">
+        <svg class="phone-icon" width="24" height="24">
+          <use href="img/sprite.svg#VK"></use>
+        </svg>
+        <a href="#" class="mobile-info-vk">Вконтакте</a>
+      </div>
+      <!-- /.mobile-info -->
+      <div class="mobile-info">
+        <svg class="phone-icon" width="24" height="24">
+          <use href="img/sprite.svg#Instagram"></use>
+        </svg>
+        <a href="#" class="mobile-info-instagram">Инстаграм</a>
+      </div>
+      <!-- /.mobile-info -->
+    </div>
     <nav class="navbar">
+      <a href="#" class="mobile-menu-toggle">
+        <div class="mobile-menu-line"></div>
+        <div class="mobile-menu-line"></div>
+        <div class="mobile-menu-line"></div>
+      </a>
       <a href="./" class="header-logo">
-        <svg class="logo-svg" wdth="140" height="44">
+        <svg class="logo-svg">
           <use href="img/sprite.svg#logo-light"></use>
         </svg>
       </a>
@@ -39,7 +109,7 @@
       </ul>
 
       <div class="header-phone">
-        <svg class="logo-svg" wdth="24" height="24">
+        <svg class="phone-icon" width="24" height="24">
           <use href="img/sprite.svg#phone"></use>
         </svg>
         <a href="tel:+74996861014" class="header-phone-link"
@@ -47,7 +117,12 @@
         >
       </div>
       <!-- /.header-phone -->
-      <button class="navbar-button button">Получить консультацию</button>
+      <button class="navbar-button button">
+        <svg class="button-icon" width="24" height="24">
+          <use href="img/sprite.svg#phone"></use>
+        </svg>
+        <span class="button-text">Получить консультацию</span>
+      </button>
     </nav>
     <!-- /.navbar -->
     <header class="header header-image">
