add: js Open/Close menu

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <use href="img/sprite.svg#Addresse"></use>
         </svg>
         <address class="mobile-info-address">
-          г. Мосвка, Холодильный пер. 4к1с8
+          г. Мосвка, Холодильный пер. 4к18
         </address>
       </div>
       <!-- /.mobile-info -->
@@ -68,14 +68,14 @@
         <svg class="phone-icon" width="24" height="24">
           <use href="img/sprite.svg#VK"></use>
         </svg>
-        <a href="#" class="mobile-info-vk">Вконтакте</a>
+        <a href="#" class="mobile-info-vk"></a>
       </div>
       <!-- /.mobile-info -->
       <div class="mobile-info">
         <svg class="phone-icon" width="24" height="24">
           <use href="img/sprite.svg#Instagram"></use>
         </svg>
-        <a href="#" class="mobile-info-instagram">Инстаграм</a>
+        <a href="#" class="mobile-info-instagram"></a>
       </div>
       <!-- /.mobile-info -->
     </div>
