--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </ul>
       <a href="tel:+74996861014" class="mobile-phone">+7 (499)686-10-14</a>
       <div class="mobile-info">
-        <svg class="phone-icon" width="24" height="24">
-          <use href="img/sprite.svg#Addresse"></use>
+        <svg class="address-icon" width="24" height="29">
+          <use href="img/sprite.svg#address"></use>
         </svg>
         <address class="mobile-info-address">
           г. Мосвка, Холодильный пер. 4к18
@@ -56,26 +56,26 @@
       </div>
       <!-- /.mobile-info -->
       <div class="mobile-info">
-        <svg class="phone-icon" width="24" height="24">
-          <use href="img/sprite.svg#Email"></use>
+        <svg class="email-icon" width="24" height="24">
+          <use href="img/sprite.svg#email"></use>
         </svg>
         <a href="mailto:a.dragunov@tdaliance.ru" class="mobile-info-email"
           >a.dragunov@tdaliance.ru</a
         >
       </div>
       <!-- /.mobile-info -->
-      <div class="mobile-info">
-        <svg class="phone-icon" width="24" height="24">
-          <use href="img/sprite.svg#VK"></use>
+      <div class="network-info">
+        <svg class="vk-icon" width="24" height="24">
+          <use href="img/sprite.svg#vk"></use>
         </svg>
         <a href="#" class="mobile-info-vk"></a>
       </div>
       <!-- /.mobile-info -->
-      <div class="mobile-info">
-        <svg class="phone-icon" width="24" height="24">
-          <use href="img/sprite.svg#Instagram"></use>
+      <div class="network-info">
+        <svg class="inst-icon" width="24" height="24">
+          <use href="img/sprite.svg#inst"></use>
         </svg>
-        <a href="#" class="mobile-info-instagram"></a>
+        <a href="#" class="mobile-info-inst"></a>
       </div>
       <!-- /.mobile-info -->
     </div>
