--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
           <ul class="swiper-wrapper header-features">
             <!-- Слайды -->
             <li class="swiper-slide header-features-item">
-              <svg wdth="36" height="36">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#time"></use>
               </svg>
               <p class="header-features-text">Непрерывная работа c 2017 года</p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg wdth="36" height="36">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#certificate"></use>
               </svg>
               <p class="header-features-text">Вся продукция сертифицирована</p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg wdth="36" height="36">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#control"></use>
               </svg>
               <p class="header-features-text">
@@ -169,7 +169,7 @@
               </p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg wdth="36" height="36">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#delivery"></use>
               </svg>
               <p class="header-features-text">
@@ -177,7 +177,7 @@
               </p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg wdth="36" height="36">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#speed"></use>
               </svg>
               <p class="header-features-text">Оперативное производство</p>
@@ -186,12 +186,12 @@
           <!-- кнопки навигации вперед/назад -->
           <div class="slider-buttons">
             <div class="slider-button-prev">
-              <svg wdth="36" height="24">
+              <svg width="36" height="24">
                 <use href="img/sprite.svg#arrow-prev"></use>
               </svg>
             </div>
             <div class="slider-button-next">
-              <svg wdth="36" height="24">
+              <svg width="36" height="24">
                 <use href="img/sprite.svg#arrow-next"></use>
               </svg>
             </div>
