--- a/index.html
+++ b/index.html
@@ -259,6 +259,71 @@
       </div>
       <!-- container -->
     </section>
+    <section class="section production">
+      <div class="container">
+         <div class="seporator"></div>
+        <h2 class="section-title">Контактное производство</h2>
+        <div class="cards">
+          <a href="#" class="card">
+            <div class="card-content"><h3 class="card-title">Автомобильная химия</h3>
+            <p class="card-text">Безусловно, сплочённость команды профессионалов позволяет оценить значение форм воздействия.</p></div>
+            <!-- /.card-content -->
+            <img src="img/автомобильная химия.png" alt="Автомоильная химия" class="card-image">
+          </a>
+          <a href="#" class="card">
+           <div class="card-content"> <h3 class="card-title">Бытовая химия</h3>
+            <p class="card-text">А также стремящиеся вытеснить традиционное производство, нанотехнологии функционально разнесены на независимые элементы.</p></div>
+            <img src="img/бытовая химия.png" alt="Бытовая химия" class="card-image">
+          </a>
+           <!-- /.card-content -->
+           <a href="#" class="card">
+            <div class="card-content"><h3 class="card-title">Дезинфицирующие средства</h3>
+            <p class="card-text">Лишь интерактивные прототипы призваны к ответу.</p></div>
+            <!-- /.card-content -->
+            <img src="img/дезинфицирующие средства.png" alt="Дезинфицирующие средства" class="card-image">
+            </a>
+          </a>
+          <a href="#" class="card">
+            <div class="card-content"><h3 class="card-title">Пищевые аэрозоли</h3>
+            <p class="card-text">Безусловно, сплочённость команды профессионалов позволяет оценить значение форм воздействия.</p></div>
+            <!-- /.card-content -->
+            <img src="img/пищевые аэрозоли.png" alt="Пищевые аэрозоли" class="card-image">
+          </a>
+          <a href="#" class="card">
+           <div class="card-content"> <h3 class="card-title">Косметическая продукция</h3>
+            <p class="card-text">Лишь интерактивные прототипы призваны к ответу.</p></div>
+           <!-- /.card-content -->
+            <img src="img/косметическая продукция.png" alt="Косметическая продукция" class="card-image">
+          </a>
+          <a href="#" class="card">
+            <div class="card-content"><h3 class="card-title">Краски аэрозольные</h3>
+            <p class="card-text">А также стремящиеся вытеснить традиционное производство, нанотехнологии функционально разнесены на независимые элементы.</p></div>
+            <!-- /.card-content -->
+            <img src="img/краски аэрозольные.png" alt="Краски аэрозольные" class="card-image">
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="section production">
+      <div class="container">
+         <div class="seporator"></div>
+        <h2 class="section-title">собственные торговые марки</h2>
+        <div class="cards2">
+          <a href="#" class="card2">
+          <div class="card2-content">
+            <h3 class="card2-title">Автохимия AG-Tech</h3>
+          <p class="card2-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+        </div>
+          <img src="img/AGTECH.png" alt="AG-Tech" class="card2-image">
+          </a>
+          <a href="#" class="card2">
+          <div class="card2-content">
+          <h3 class="card2-title">Автохимия AP</h3>
+          <p class="card2-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p></div>
+          <img src="img/AP.png" alt="AP" class="card2-image">
+          </a>
+        </div>
+        </section>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
