--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <section class="section production">
       <div class="container">
          <div class="seporator"></div>
-        <h2 class="section-title">Контактное производство</h2>
+        <h2 class="section-title">Контрактное производство</h2>
         <div class="cards">
           <a href="#" class="card">
             <div class="card-content"><h3 class="card-title">Автомобильная химия</h3>
