add: trademark-cards

--- a/index.html
+++ b/index.html
@@ -304,25 +304,29 @@
         </div>
       </div>
     </section>
-    <section class="section production">
+    <section class="section trademark">
       <div class="container">
          <div class="seporator"></div>
         <h2 class="section-title">собственные торговые марки</h2>
-        <div class="cards2">
-          <a href="#" class="card2">
-          <div class="card2-content">
-            <h3 class="card2-title">Автохимия AG-Tech</h3>
-          <p class="card2-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+        <div class="trademark-cards">
+          <div class="trademark-card">
+          <svg class="trademark-card-logo">
+                <use href="img/sprite.svg#AGTECH"></use>
+              </svg>
+            <h3 class="trademark-card-title">Автохимия AG-Tech</h3>
+          <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
         </div>
-          <img src="img/AGTECH.png" alt="AG-Tech" class="card2-image">
-          </a>
-          <a href="#" class="card2">
-          <div class="card2-content">
-          <h3 class="card2-title">Автохимия AP</h3>
-          <p class="card2-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p></div>
-          <img src="img/AP.png" alt="AP" class="card2-image">
-          </a>
+         <div class="trademark-card">
+          <svg class="trademark-card-logo">
+                <use href="img/sprite.svg#AP"></use>
+              </svg>
+          <h3 class="trademark-card-title">Автохимия AP</h3>
+          <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+         </div>
         </div>
+        <!-- trademark-cards -->
+      </div>
+      <!-- container -->
         </section>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
