fix: clients-logo-item hover

--- a/index.html
+++ b/index.html
@@ -399,33 +399,33 @@
             </div>
             <!-- client-content -->
             <div class="clients-logo-list">
-<div class="client-logo-item">
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
-<div class="client-logo-item">
+</a>
+<a href="#" class="client-logo-item">
   <img src="img/client.png" alt="" class="clients-logo">
-</div>
+</a>
             </div>
            </div>
            <!-- contents-wrapper -->
