--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
   
 
   <!-- If we need navigation buttons -->
-  <div class="steps-buttons">
-    <div class="steps-button-prev"><svg width="36" height="24">
+  <div class="steps-buttons primary-buttons-wrapper">
+    <div class="steps-button-prev primary-button-prev"><svg width="36" height="24">
                 <use href="img/sprite.svg#arrow-prev"></use>
               </svg></div>
-  <div class="steps-button-next"><svg width="36" height="24">
+  <div class="steps-button-next primary-button-next"><svg width="36" height="24">
                 <use href="img/sprite.svg#arrow-next"></use>
               </svg></div>
   </div>
@@ -335,9 +335,9 @@
              <div class="founder-content">
              <div class="seporator"></div>
         <h2 class="section-title">Отношение к делу и к клиентам</h2>
-        <p class="founder-text">Кстати, интерактивные прототипы описаны максимально подробно. Повседневная практика показывает, что укрепление и развитие внутренней структуры говорит о возможностях соответствующих условий активизации. Внезапно, независимые государства, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут подвергнуты целой серии независимых исследований. С учётом сложившейся международной обстановки, синтетическое тестирование выявляет срочную потребность системы массового участия.
+        <p class="founder-text">Кстати, интерактивные прототипы описаны максимально подробно. Повседневная практика показывает, что укрепление и развитие внутренней структуры говорит о возможностях соответствующих условий активизации. Внезапно, независимые государства, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут подвергнуты целой серии независимых исследований. С учётом сложившейся международной обстановки, синтетическое тестирование выявляет срочную потребность системы массового участия.<br><br>
 А ещё действия представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию, в равной степени предоставлены сами себе. Не следует, однако, забывать, что выбранный нами инновационный путь в значительной степени обусловливает важность дальнейших направлений развития.</p>
-         <a href="" class="button-link">Оставь заявку</a>
+         <a href="#" class="button-link">Подробности о компании</a>
            </div>
           </div>
           <!-- /.founder-conteent-wrapper -->
@@ -353,7 +353,7 @@
         <h2 class="section-title">
           Производим аэрозольную продукцию для разных сфер</h2> 
         <ul class="clients-list">
-          <li class="clents-list-item">
+          <li class="clients-list-item">
             <svg width="30" height="30" class="clients-list-icon">
                 <use href="img/sprite.svg#him"></use>
               </svg>
@@ -437,28 +437,80 @@
             <div class="seporator"></div>
             <h2 class="section-title">Блог экспертов в области производства</h2>
             <!-- Slider main container -->
-<div class="swiper">
+<div class="swiper blog-slider">
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide">Slide 1</div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
-    ...
-  </div>
-  <!-- If we need pagination -->
-  <div class="swiper-pagination"></div>
+   
+    <a href="#" class="swiper-slide blog-card">
+      <img src="img/blog-card.jpg" alt="" class="blog-card-image">
+      <h3 class="blog-card-title">Современная методология разработки одухотворила всех причастных</h3>
+      <p class="blog-card-text">Действия представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию, в равной степени предоставлены...</p>
+    </a>
+     <a href="#" class="swiper-slide blog-card">
+      <img src="img/blog-post.jpg" alt="" class="blog-card-image">
+      <h3 class="blog-card-title">Сложно сказать, почему жизнь прекрасна</h3>
+      <p class="blog-card-text">Сложно сказать, почему жизнь прекрасна
+Сложно сказать, почему элементы политического процесса функционально разнесены на независимые элементы. Безусловно, высокотехнологичная...</p>
+    </a>
+    <a href="#" class="swiper-slide blog-card">
+      <img src="img/blog-card.jpg" alt="" class="blog-card-image">
+      <h3 class="blog-card-title">Современная методология разработки одухотворила всех причастных</h3>
+      <p class="blog-card-text">Действия представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию, в равной степени предоставлены...</p>
+    </a>
+    </div>
 
-  <!-- If we need navigation buttons -->
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
-
-  <!-- If we need scrollbar -->
-  <div class="swiper-scrollbar"></div>
-</div>
+  <div class="blog-slider-footer">
+    <a href="#" class="button-link">Весь блог</a>
+    <div class="blog-buttons primary-buttons-wrapper">
+    <div class="blog-button-prev primary-button-prev"><svg width="36" height="24">
+                <use href="img/sprite.svg#arrow-prev"></use>
+              </svg>
+            </div>
+  <div class="blog-button-next primary-button-next"><svg width="36" height="24">
+                <use href="img/sprite.svg#arrow-next"></use>
+              </svg>
+            </div>
           </div>
-          <!-- container -->
-        </section>
+  <!-- /.blog-button -->
+  </div>
+      </div>
+     </div>
+     <!-- container -->
+    </section>
+    <section class="cta">
+      <div class="bg-grey section-cta">
+        <img src="img/cta.png" alt="call to action" class="cta-image">
+        <div class="cta-form-wrapper container">
+          <form action="#" class="cta-form">
+            <h2 class="secton-title cta-form-title">Хотите сотрудничать?</h2>
+            <p class="cta-form-text">Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время ответит на все интересующие вопросы и поможем даже в самых сложных случаях!</p>
+            <div class="input-group-wrapper">
+              <div class="input-group">
+                <input id="user-name" type="text" class="input" placeholder=" ">
+                <label class="input-group-label" for="user-name">Имя</label>
+              </div>
+              <!-- /.input-group -->
+              <div class="input-group">
+                <input id="user-phone" type="tel" class="input" placeholder=" ">
+                <label class="input-group-label" for="user-phone">Номер телефона</label>
+              </div>
+              <!-- /.input-group -->
+            </div>
+            <!-- /.input-group-wrapper -->
+            <div class="cta-form-footer">
+              <button type="submit" class="button cta-form-button">Отправить заявку</button>
+              <div class="notify">
+                <svg class="notify-icon" width="14" height="14">
+                <use href="img/sprite.svg#shield"></use>
+              </svg>
+                <p class="notify-text">Обращаясь к нам вы получаете не только профессиональную работу, но и абсолютную конфиденциальность информации!</p>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
