--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body class="front-page">
     <div class="mobile-menu">
       <ul class="mobile-menu-nav">
         <li class="mobile-menu-nav-item">
@@ -87,13 +87,13 @@
         <svg class="logo-svg logo-light">
           <use href="img/sprite.svg#logo-light"></use>
         </svg>
-        <svg class="logo-svg logo">
+        <svg class="logo-svg logo-dark">
           <use href="img/sprite.svg#logo"></use>
         </svg>
       </a>
       <ul class="header-nav">
         <li class="header-nav-item">
-          <a href="#" class="header-nav-link">О компании</a>
+          <a href="/about.html" class="header-nav-link">О компании</a>
         </li>
         <li class="header-nav-item">
           <a href="#" class="header-nav-link">Контрактное производство</a>
